# grouped_gemm

./: setup.py
csrc/: permute.cu  permute.h
grouped_gemm/: backend.py  ops.py
grouped_gemm_dev/: CMakeLists.txt  README.md  __init__.py  test_sinkhorn.py  test_torch_ops.py  test_unit_func.py
grouped_gemm_dev/moe/: __init__.py  group_gemm_ops.cu  ops.py  sinkhorn.cu  sinkhorn.h
grouped_gemm_dev/moe/cutlass_kernels/: CMakeLists.txt  cutlass_heuristic.cc  cutlass_heuristic.h  th_utils.h
grouped_gemm_dev/moe/cutlass_kernels/moe_gemm/: compute_occupancy.h  default_fpA_intB_traits.h  ft_gemm_configs.h  grouped_gemm_problem_desc.h  moe_gemm_backward_template.h  moe_gemm_forward_template.h  moe_gemm_kernels.h  moe_gemm_kernels_bf16_bf16.cu  moe_gemm_kernels_fp16_fp16.cu  moe_gemm_kernels_fp32_fp32.cu  moe_gemm_utils.h  moe_permute_kernels.h
